# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//presearch/components/sidebar/buildflags/buildflags.gni")
import("//components/vector_icons/vector_icons.gni")

aggregate_vector_icons("presearch_vector_icons") {
  icon_directory = "."

  sources = [
    "presearch_ads_close_button.icon",
    "presearch_ads_info.icon",
    "download_unlock.icon",
    "open_in_ipfs.icon",
    "open_in_tor.icon",
    "speedreader.icon",
    "speedreader_on_active.icon",
    "speedreader_on_inactive.icon",
  ]

  if (enable_sidebar) {
    sources += [
      "sidebar_add_item.icon",
      "sidebar_bookmarks.icon",
      "sidebar_presearch_together.icon",
      "sidebar_crypto_wallet.icon",
      "sidebar_history.icon",
      "sidebar_item_added_check.icon",
      "sidebar_items_down_arrow.icon",
      "sidebar_items_up_arrow.icon",
      "sidebar_settings.icon",
      "sidebar_trash.icon",
    ]
  }
}

source_set("vector_icons") {
  sources = get_target_outputs(":presearch_vector_icons")

  deps = [
    ":presearch_vector_icons",
    "//base",
    "//skia",
    "//ui/gfx",
  ]
}
