# Copyright (c) 2021 The Presearch Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

presearch_browser_download_sources = [
  "//presearch/browser/download/presearch_download_item_model.cc",
  "//presearch/browser/download/presearch_download_item_model.h",
]

presearch_browser_download_deps = [
  "//base",
  "//components/download/public/common:public",
  "//components/strings:components_strings_grit",
  "//services/network/public/cpp",
  "//ui/base",
  "//ui/gfx",
  "//url",
]
